name:                chess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chess#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Goldammer
maintainer:          goldammer.christian@gmail.com
copyright:           2017 Chris Goldammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Helpers, Board, Logic, Algorithms, Stockfish, Pgn, Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , tuple
                     , HUnit
                     , random
                     , Unique
                     , MissingH
                     , attoparsec
                     , turtle
                     , text
                     , system-filepath
                     , parsec
                     , aeson
                     , bytestring
                     , utf8-string
                     , MonadRandom
                     , either
                     , optparse-applicative
  default-language:    Haskell2010
-- 
executable chess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chess
  default-language:    Haskell2010

executable profile-exe
  hs-source-dirs:      testApp
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chess
                     , text
                     , either
                     , attoparsec
                     , turtle
  default-language:    Haskell2010

test-suite chess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     LogicTest, PgnTest, StringParseTest
  build-depends:       base
                     , chess
                     , lens
                     , HUnit
                     , containers
                     , attoparsec
                     , text
                     , turtle
                     , either
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/githubuser/chess
