name:                chess
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chess#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Goldammer
maintainer:          goldammer.christian@gmail.com
copyright:           2017 Chris Goldammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       Chess.Types
                     , Chess.Board
                     , Chess.Fen
                     , Chess.Logic
                     , Chess.Algorithms
                     , Chess.Stockfish
                     , Chess.Lib
                     , Chess.Helpers
                     , Chess.Pgn.Logic
                     , Chess.Pgn.External
                     , Chess.Metrics

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , tuple
                     , HUnit
                     , random
                     , Unique
                     , MissingH
                     , attoparsec
                     , turtle
                     , text
                     , system-filepath
                     , parsec
                     , aeson
                     , bytestring
                     , utf8-string
                     , MonadRandom
                     , either
                     , optparse-applicative
                     , QuickCheck
  other-modules:       
  default-extensions:  OverloadedStrings
                     , FlexibleInstances
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , TemplateHaskell
  default-language:    Haskell2010

executable profile-exe
  hs-source-dirs:      profileApp
  main-is:             ParsePGN.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chess
                     , either
  default-extensions:  OverloadedStrings
                     , FlexibleInstances
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , TemplateHaskell
  default-language:    Haskell2010

test-suite chess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LogicTest, PgnTest, StringParseTest, StockfishTest
  build-depends:       base
                     , chess
                     , lens
                     , HUnit
                     , containers
                     , attoparsec
                     , text
                     , turtle
                     , either
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , FlexibleInstances
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , TemplateHaskell
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/githubuser/chess
